# hibrain_library

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hi_convert.cpp  hi_convert.h  install_manifest.txt  libhi_convert.so.1  libhi_convert.so.1.0.0  readme.md  readme.txt
converter/: CMakeLists.txt
converter/include/: hi_convert.h
converter/src/: hi_convert.cpp
idls/include/: Timed_cvMat.hh  Timed_cvMat.idl  hi-brain.hh
include/: Timed_cvMatStub.h  hi_convert.h  hi_matviewer.h  hi_matviewer3d.h  hi_viewer_template.h
sharedmemory/: CMakeLists.txt
sharedmemory/include/: SharedMemory.h
src/: SharedMemory.cpp  Timed_cvMatStub.cpp  hi-brainDynSK.cc  hi-brainSK.cc  hi_convert.cpp  hi_convert_vision.cpp  hi_matviewer.cpp
viewer/: CMakeLists.txt
viewer/include/: hi_model_template.h
viewer/src/: hi_matviewer3d.cpp
vmc_builder/: vmc_builder
vmc_builder/conf/: V_MatViewer.yaml  V_MatViewer3d.yaml  default.yaml
vmc_builder/files/cxx_basic/cmake/: wix.xsl.in
vmc_builder/files/cxx_basic/doc/: conf.py.in
vmc_builder/files/cxx_basic/idl/: CMakeLists.txt
vmc_builder/samples/cv_retina/: cv_retina.cpp  cv_retina.h  cv_retina.yaml
vmc_builder/samples/filter3d/: filter3d.cpp  filter3d.h  filter3d.yaml
vmc_builder/samples/filter3d/debug/: a.out  filter3d.cpp
vmc_builder/samples/kernel/: kernel.cpp  kernel.h  kernel.yaml
vmc_builder/samples/usbcamera/: hi_usbcamera.h  usbcamera.yaml
vmc_builder/test/: .project  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.usbcamera  RTC.xml  cmake_install.cmake  cpack_options.cmake  rtc.conf  uninstall_target.cmake  usbcamera.conf
vmc_builder/test/cmake/: Makefile  cmake_install.cmake  usbcamera-config-version.cmake  usbcamera-config.cmake  usbcamera-config.cmake.in  usbcamera.pc
vmc_builder/test/doc/: Makefile  cmake_install.cmake  doxyfile
vmc_builder/test/doc/content/: index.txt  index_j.txt
vmc_builder/test/idl/: Makefile  cmake_install.cmake  hi_brain.hh  hi_brainDynSK.cc  hi_brainSK.cc  hi_brainSkel.cpp  hi_brainSkel.h  hi_brainStub.cpp  hi_brainStub.h
vmc_builder/test/include/: CMakeLists.txt  Makefile  cmake_install.cmake
vmc_builder/test/include/usbcamera/: CMakeLists.txt  Makefile  cmake_install.cmake  usbcamera.h
vmc_builder/test/src/: CMakeLists.txt  Makefile  cmake_install.cmake  hi_usbcamera.cpp  usbcamera.cpp  usbcameraComp  usbcameraComp.cpp
vmc_builder/tmpl/bak/: CMakeLists.txt  ModuleName.cpp
vmc_builder/tmpl/cxx_basic/: .project  CMakeLists.txt  mod.conf  readme  rtc.conf  rtc.xml
vmc_builder/tmpl/cxx_basic/doc/: doc_en.txt  doc_ja.txt
vmc_builder/tmpl/cxx_basic/include/: CMakeLists.txt  mod.h  modCMakeLists.txt
vmc_builder/tmpl/cxx_basic/src/: CMakeLists.txt  mod.cpp  modComp.cpp
vmc_builder/tmpl/cxx_debug/: test.cpp
vmc_builder/tmpl/cxx_debug/debug/: filter3d.h  filter3d.yaml  test.cpp
